Closed
Bug 241700
Opened 21 years ago
Closed 21 years ago
alt+spacebar must be pressed twice to activate Windows control menu
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: jellis, Assigned: emaijala+moz)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.01 KB,
patch
|
neil
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a) Gecko/20040425 Firefox/0.8.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a) Gecko/20040425 Firefox/0.8.0+
The Windows control menu does not show when alt+spacebar is pressed the first
time; it must be pressed twice to show the menu. This shortcut works fine in
Thunderbird and suite. One can also show this menu by clicking on the icon in
the top left of the window, but the shortcut is very useful.
Reproducible: Always
Steps to Reproduce:
1. Start Firefox
2. Press Alt+spacebar (nothing happens)
3. Press Alt+spacebar (Windows control menu displays)
Actual Results:
Nothing happens after first press of alt+spacebar. When alt+spacebar is pressed
again, the Windows control menu shows as it should the first time.
Expected Results:
I expected the Windows control menu to display in the top lefthand corner of the
window on the initial press of alt+spacebar.
| Reporter | ||
Updated•21 years ago
|
Flags: blocking1.0?
Comment 2•21 years ago
|
||
Regressed between 04/17 and 04/22 (Firefox nightlies).
Still happens in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a)
Gecko/20040430 Firefox/0.8.0+
Ere, this regression happened around the same time as bug 241447. Is it yours too?
Keywords: regression
| Assignee | ||
Comment 3•21 years ago
|
||
Could be my bad, and it's not FF only. I tested alt-space, but it works fine
when for example url bar has focus. When content has focus, two presses are
needed. I'll investigate.
Assignee: firefox → ere
Component: Menus → XP Toolkit/Widgets
Product: Firefox → Browser
Target Milestone: --- → mozilla1.8alpha
Version: unspecified → Trunk
| Assignee | ||
Comment 4•21 years ago
|
||
The state of modifier keys must be checked in WM_CHAR too, because a child
window (such as the content area) could just let that one go through to the
parent window.
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 147437 [details] [diff] [review]
Patch
Requesting reviews for yet another key handling fix..
Attachment #147437 -
Flags: superreview?(bryner)
Attachment #147437 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 6•21 years ago
|
||
Comment on attachment 147437 [details] [diff] [review]
Patch
I did wonder but at the time I couldn't think how you could get a WM_CHAR
without a WM_KEYDOWN first.
Attachment #147437 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Comment 7•21 years ago
|
||
If it helps, Windows XP SP1:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a) Gecko/20040426
Same problem... I've noticed that letting go of the Alt key is optional. So:
Alt-Space-Space works too...
Updated•21 years ago
|
Attachment #147437 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 8•21 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 9•21 years ago
|
||
removing nomination for 1.0 - sounds like this was a trunk bug
Flags: blocking-aviary1.0?
Updated•20 years ago
|
QA Contact: bugzilla → nobody
You need to log in
before you can comment on or make changes to this bug.
Description
•