Fix for bug 241700: alt+spacebar must be pressed twice to activate Windows control menu r=neil sr=bryner